updaed for configs

--- a/aspnetcoreoauth/appsettings.json
+++ b/aspnetcoreoauth/appsettings.json
@@ -7,5 +7,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OAuth": {
+    "Google": {
+      "ClientId": "Authentication_Google_ClientId",
+      "ClientSecret": "Authentication_Google_ClientSecret"
+    } 
+  }
 }
