--- a/aspnetcoreoauth/aspnetcoreoauth.csproj
+++ b/aspnetcoreoauth/aspnetcoreoauth.csproj
@@ -23,6 +23,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Castle.Facilities.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Castle.Windsor" Version="5.0.0" />
     <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="3.3.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.4.0" />
